# Virgo-Orion

./: .gitignore  CMakeLists.txt  README.md
include/common/: constants.h  my_hhash.h  polynomial.h  prime_field.h  random_generator.h  utility.h
include/frontend/: circuit_fast_track.h  zk_prover.h  zk_verifier.h
include/linear_gkr/: circuit_fast_track.h  prime_field.h  zk_prover.h  zk_verifier.h
include/orion/VPD/: fri.h  linearPC.h  vpd_prover.h  vpd_verifier.h
include/orion/infrastructure/: RS_polynomial.h  merkle_tree.h
include/orion/linear_code/: expanders.h  linear_code_encode.h  parameter.h
include/orion/linear_gkr/: circuit_fast_track.h  prover.h  verifier.h
include/orion/poly_commitment/: README.md  poly_commit.h
lib/orion/: .gitignore  CMakeLists.txt
lib/orion/examples/: multivariate_PC_test.cpp  univariate_PC_test.cpp
lib/orion/include/VPD/: fri.h  linearPC.h  vpd.h  vpd_prover.h  vpd_verifier.h
lib/orion/include/infrastructure/: RS_polynomial.h  constants.h  merkle_tree.h  my_hhash.h  utility.h
lib/orion/include/linear_code/: expanders.h  linear_code_encode.h
lib/orion/include/linear_gkr/: circuit_fast_track.h  polynomial.h  prime_field.h  prover.h  random_generator.h  verifier.h
lib/orion/include/poly_commitment/: poly_commit.h
lib/orion/src/: encode_test.cpp
lib/orion/src/VPD/: fft_circuit_GKR.cpp  fri.cpp  linearPC.cpp  vpd_prover.cpp  vpd_verifier.cpp
lib/orion/src/infrastructure/: RS_polynomial.cpp  merkle_tree.cpp  utility.cpp
lib/orion/src/linear_code/: expander.cpp  linear_code_encode.cpp
lib/orion/src/linear_gkr/: polynomial.cpp  prime_field.cpp  prover.cpp  verifier.cpp
lib/orion/src/poly_commitment/: poly_commit.cpp
src/VPD/: fft_circuit_GKR.cpp
src/common/: polynomial.cpp  prime_field.cpp  utility.cpp
src/frontend/: fft_circuit_GKR.cpp  main_zk.cpp  zk_prover.cpp  zk_verifier.cpp
src/infrastructure/: RS_polynomial.cpp
src/linear_gkr/: main_fast_track.cpp  main_zk.cpp  prime_field.cpp  zk_prover.cpp  zk_verifier.cpp
src/orion/VPD/: fft_circuit_GKR.cpp  fri.cpp  linearPC.cpp  vpd_prover.cpp  vpd_verifier.cpp
src/orion/infrastructure/: RS_polynomial.cpp  merkle_tree.cpp
src/orion/linear_code/: expander.cpp  linear_code_encode.cpp
src/orion/linear_gkr/: prover.cpp  verifier.cpp
src/orion/poly_commitment/: poly_commit.cpp
src/orion/test/: encode_test.cpp  multivariate_PC_test.cpp  univariate_PC_test.cpp
tests/SHA256/: .gitignore  build.py  build.sh  compile.sh  run.py
